# evalkit.orig

./: .gitignore  CHANGELOG.md  Cargo.toml  TODOS.md  devenv.nix  devenv.yaml  implement.md  run-loop.sh  state.md
.github/actions/evalkit-pr-comment/: README.md  action.yml
.github/workflows/: boundary.yml
docs/: ROADMAP.md  benchmarks.md  cli-config.md  code-agent-eval-baseline-plan.md  code-agent-eval-suite-spec.md  competitive-analysis-2026-04.md  decisions.md  eval-facade.md  evalkit-kernel-boundary-plan.md  gap-analysis.md  integrations.md  plugin-protocol.md  post-2.0-direction.md  root-crate-boundary-audit.md  root-crate-dep-surface.md  runtime-extraction-migration.md  scorers.md  session-notes.md  stability.md  verda-competitive-analysis.md
docs/archive/old/: implement.md  state.md
docs/archive/old/docs/braindump/: 00-record.md  01-cross-reference.md  02-discoveries.md  convo.md  synthesis.md
docs/archive/old/docs/brainstorm/: 00-decisions-log.md  (+1 more)
docs/archive/swarm-workspace/: input.md  output.md  phase0-analysis.md
docs/archive/swarm-workspace/agents/: agent-0.md  agent-1.md  agent-2.md  agent-3.md
docs/braindump/: 02-discoveries.md
docs/issues/: 01-audit-root-crate-boundary.md  02-create-evalkit-runtime-and-move-runtime-apis.md  03-add-semver-safe-happy-path-facade.md  04-add-boundary-contract-tests.md  05-benchmark-runtime-extraction.md  README.md
docs/research/: 01-landscape.md
docs/schema/: run-log-v1.schema.json  run-log-v2.schema.json  run-log-v3.schema.json
docs/spec/: eval-kernel.md
docs/superpowers/plans/: 2026-04-26-output-source-rename.md  2026-04-27-kernel-output-api-2.0.md
docs/superpowers/specs/: 2026-04-26-output-source-naming-design.md  2026-04-27-kernel-output-api-2.0-design.md  2026-05-02-metric-rearchitecture-exploration.md
docs2/prompts/: specify.md
docs2/results/braindump/: 00-record.md  01-cross-reference.md
docs2/results/research/: 03-user-workflows.md  04-architecture.md  07-trajectory.md
docs2/results/spec/: domain-language-review.md  glossary-rewrite.md
docs2/transcripts/: domain.md  research.md  specify.md
evalkit/: Cargo.toml
evalkit-cli/: Cargo.toml
evalkit-cli/src/: main.rs  migrate.rs
evalkit-cli/tests/: diff.rs  migrate.rs
evalkit-exporters-langfuse/: Cargo.toml
evalkit-exporters-langfuse/src/: lib.rs
evalkit-exporters-langfuse/tests/: export_run.rs
evalkit-otel/: Cargo.toml
evalkit-otel/src/: lib.rs
evalkit-otel/tests/: observe.rs
evalkit-providers/: Cargo.toml
evalkit-providers/src/: lib.rs
evalkit-providers/tests/: python_shims.rs
evalkit-runtime/: Cargo.toml
evalkit-runtime/examples/: throughput_bench.rs
evalkit-runtime/src/: lib.rs
evalkit-scorers-embed/: Cargo.toml
evalkit-scorers-embed/src/: lib.rs
evalkit-scorers-llm/: Cargo.toml
evalkit-scorers-llm/prompts/: g_eval.txt  g_eval_step_plan.txt  llm_classifier.txt
evalkit-scorers-llm/src/: lib.rs
evalkit-scorers-rag/: Cargo.toml
evalkit-scorers-rag/src/: lib.rs
evalkit-scorers-redteam/: Cargo.toml
evalkit-scorers-redteam/src/: lib.rs
evalkit-scorers-text/: Cargo.toml
evalkit-scorers-text/src/: lib.rs
evalkit-server/: Cargo.toml
evalkit-server/src/: lib.rs  main.rs
evalkit/examples/: basic.rs  prod_eval_daemon.rs  quickstart.rs
evalkit/src/: acquisition.rs  budget.rs  comparison.rs  dataset.rs  eval.rs  lib.rs  mapper.rs  math.rs  run.rs  run_result.rs  sample.rs  sample_shapes.rs  schema.rs  score.rs  scorer.rs  scorer_context.rs  scorer_error.rs  scorer_ext.rs  scorer_set.rs  source.rs  stats.rs  task.rs
evalkit/tests/: boundary_kernel_surface.rs  comparison.rs  dataset.rs  jsonl.rs  run.rs  run_result.rs  sample_shapes.rs  schema.rs  stats.rs
examples/: basic.rs  prod_eval_daemon.rs  quickstart.rs
old/: run-loop.sh
old/docs/braindump/: convo.md
old/docs/research/: 05-pain-points.md  09-failure-archaeology.md  synthesis.md
old/docs/spec/: conformance-report.md  decisions-log.md
old/docs2/.claude/: settings.local.json
old/docs2/prompts/: braindump.md  brainstorm.md  research-v2.md  retro.md  spec-domain-review.md
old/docs2/results/braindump/: synthesis.md
old/docs2/results/brainstorm/: 00-decisions-log.md  directions.md
old/docs2/results/research/: 02-domain-language.md  06-ecosystem.md  08-community.md
old/docs2/results/retrospective/: action-items.md  analysis.md
old/docs2/transcripts/: brainstorm.md
python/evalkit_plugin/: pyproject.toml
python/evalkit_plugin/examples/: echo_acquisition.py  echo_source.py  exact_match_scorer.py
python/evalkit_plugin/src/evalkit_plugin/: __init__.py  runtime.py
src/: acquisition.rs  comparison.rs  executor.rs  jsonl.rs  langfuse.rs  lib.rs  otel.rs  run.rs  run_result.rs  sample.rs  schema.rs  score.rs  score_definition.rs  scorer.rs  scorer_context.rs  scorer_error.rs  scorer_ext.rs  scorer_set.rs  stats.rs
src/scorers/: mod.rs
swarm-workspace/: input.md  output.md  phase0-analysis.md
swarm-workspace/agents/: agent-0.md  agent-1.md  agent-2.md  agent-3.md
swarm-workspace/messages/phase1/: 001-agent-0.md  002-agent-1.md  003-agent-2.md  004-agent-3.md  005-agent-0.md  006-agent-1.md  007-agent-2.md  008-agent-3.md
swarm-workspace/messages/phase2/: 009-agent-0.md  010-agent-1.md  011-agent-2.md  012-agent-3.md  013-agent-0.md  014-agent-1.md  015-agent-2.md  016-agent-3.md  017-agent-0.md  018-agent-1.md  019-agent-2.md  020-agent-3.md  021-agent-0.md  022-agent-1.md  023-agent-2.md  024-agent-3.md
swarm-workspace/messages/phase3/: 025-agent-0.md  026-agent-1.md  027-agent-2.md  028-agent-3.md
tests/: boundary_kernel_surface.rs  comparison.rs  jsonl.rs  langfuse.rs  llm_judge.rs  mapper.rs  observe.rs  otel.rs  run.rs  run_result.rs  sample.rs  schema.rs  score.rs  score_definition.rs  scorer_error.rs  stats.rs
transcripts/: 2026-04-26-acquisition-naming.md  2026-04-26-acquisition-terminology.md
typescript/evalkit_plugin/: package.json  tsconfig.json
typescript/evalkit_plugin/examples/: echo_acquisition.ts  echo_source.ts  exact_match_scorer.ts
typescript/evalkit_plugin/src/: index.ts  runtime.ts
(+75 files in other folders)
