[workspace]
members = [".", "evalkit-cli", "evalkit-providers", "evalkit-exporters-langfuse", "evalkit-scorers-text", "evalkit-otel", "evalkit-scorers-llm", "evalkit-scorers-rag", "evalkit-scorers-embed", "evalkit-server"]
resolver = "2"

[package]
name = "evalkit"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
evalkit-otel = { path = "evalkit-otel" }
tempfile = "3"
