[workspace]
members = [
    "evalkit",
    "evalkit-cli",
    "evalkit-providers",
    "evalkit-exporters-langfuse",
    "evalkit-scorers-text",
    "evalkit-otel",
    "evalkit-scorers-llm",
    "evalkit-scorers-rag",
    "evalkit-scorers-embed",
    "evalkit-scorers-redteam",
    "evalkit-server",
    "evalkit-runtime",
]
resolver = "2"
