[package]
name = "evalkit-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "evalkit"
path = "src/main.rs"

[dependencies]
evalkit = { path = ".." }
evalkit-providers = { path = "../evalkit-providers" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
