[package]
name = "evalkit-exporters-langfuse"
version = "0.1.0"
edition = "2024"

[dependencies]
evalkit = { path = ".." }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt"] }
