[package]
name = "evalkit-otel"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
evalkit = { path = "../evalkit" }
evalkit-runtime = { path = "../evalkit-runtime" }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
