[package]
name = "evalkit-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
evalkit = { path = ".." }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
