[package]
name = "evalkit-runtime"
version = "2.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
evalkit = { path = "../evalkit" }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
