[package]
name = "evalkit-scorers-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyllm = { version = "0.1.1", features = ["extract"] }
evalkit = { path = "../evalkit" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
anyllm = { version = "0.1.1", features = ["extract", "mock"] }
tokio = { version = "1", features = ["macros", "rt"] }
