[package]
name = "evalkit-server"
version = "2.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["form", "json"] }
chrono = { version = "0.4", features = ["serde"] }
evalkit = { path = "../evalkit" }
evalkit-cli = { path = "../evalkit-cli" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tempfile = "3"
